# python-project-83

./: .env  .gitignore  2.py  Makefile  README.md  database.sql  pyproject.toml  setup.cfg
.github/workflows/: project-check.yml
page_analyzer/: __init__.py  app.py  configurations.py  db_process.py
page_analyzer/templates/: base.html  index.html  index2.html  urls.html
