[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["IlyasRT <razyapovig@gmail.com>"]
readme = "README.md"
packages = [{include = "page_analyzer"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
